--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <!-- Optional theme -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,300i,400,400i,600,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <title>React App</title>
+    <title>Eduardo D`Angelo</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
