--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-    <meta property="og:image" content="${require(`%PUBLIC_URL%/ogp.png`)}" />
+    <meta property="og:image" content="${require(`./ogp.png`)}" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="Software Developer" />
     <!--
